# pitchfork-cmake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  Doxyfile.in
examples/simple/: CMakeLists.txt  main.cxx
extras/: CMakeLists.txt
extras/gui/: CMakeLists.txt  Cutlery_main.cxx
extras/gui/widgets/: CMakeLists.txt  MainWidget.cxx  MainWidget.h
lib/: CMakeLists.txt  Graph.cxx  Graph.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  Point.cxx  Point.h
libs/core/dag/: CMakeLists.txt  Graph.cxx  Graph.h  Graph.test.cxx  Graph_test.cxx  Node.cxx  Node.h  Node.test.cxx  Node_test.cxx
libs/core/tests/: CMakeLists.txt  IntegrationTestDummy.cxx
libs/opt/: CMakeLists.txt  Hidden.cxx  Hidden.h
test/: CMakeLists.txt  TestGraph.cxx
tools/cmake/: ModuleHelpers.cmake  config.cmake.in  cpack.cmake.in  pfClangTidy.cmake  pfHideVariables.cmake  pfIWYU.cmake  pfLWYU.cmake  pfModules.cmake  pfSanitizers.cmake
